<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Метиатека</string>
    <string name="settings">Настройки</string>
    <string name="settidngs">Наdтройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="uUser_agreement">Пользовательское соглашение</string>

</resources>