<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_2"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow"
        app:title="@string/settings">


    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/string_star_2_screen"
            android:layout_marginEnd="@dimen/string_end_2_screen"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:text="@string/dark_theme"
            android:textAllCaps="false"
            android:textColor="@color/black_2"
            android:textSize="@dimen/string_text_size_2_screen"
            />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd= "18dp"
            android:layout_marginTop="21dp"
            android:layout_gravity="end"
            />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/share_app"
        android:layout_marginEnd= "21dp"
        android:layout_marginTop="21dp"
        android:layout_gravity="end"/>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/string_star_2_screen"
            android:layout_marginEnd="@dimen/string_end_2_screen"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:text="@string/share_app"
            android:textAllCaps="false"
            android:textColor="@color/black_2"
            android:textSize="@dimen/string_text_size_2_screen"
            />

    </FrameLayout><FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/write_support"
        android:layout_marginEnd= "25dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="end"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/write_support2"
        android:layout_marginEnd= "21dp"
        android:layout_marginTop="22dp"
        android:layout_gravity="end"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/write_support3"
        android:layout_marginEnd= "27dp"
        android:layout_marginTop="31dp"
        android:layout_gravity="end"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/write_support3"
        android:layout_marginEnd= "33dp"
        android:layout_marginTop="31dp"
        android:layout_gravity="end"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/string_star_2_screen"
        android:layout_marginEnd="@dimen/string_end_2_screen"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="21dp"
        android:text="@string/write_support"
        android:textAllCaps="false"
        android:textColor="@color/black_2"
        android:textSize="@dimen/string_text_size_2_screen"
        />

</FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/uuser_agreement"
            android:layout_marginEnd= "24dp"
            android:layout_marginTop="23dp"
            android:layout_gravity="end"/>


        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/string_star_2_screen"
            android:layout_marginEnd="@dimen/string_end_2_screen"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp"
            android:text="@string/uUser_agreement"
            android:textAllCaps="false"
            android:textColor="@color/black_2"
            android:textSize="@dimen/string_text_size_2_screen"
            />


    </FrameLayout>
</LinearLayout>